# sithra-rs

./: .gitignore  Cargo.toml  README-zh.md  README.md  justfile  rustc-ice-2025-07-14T16_50_01-48933.txt  rustc-ice-2025-07-14T16_50_01-48934.txt
adapters/onebot/: Cargo.toml
adapters/onebot/src/: api.rs  endpoint.rs  event.rs  lib.rs  main.rs  message.rs  util.rs
crates/kit/: Cargo.toml
crates/kit-macros/: Cargo.toml
crates/kit-macros/src/: lib.rs
crates/kit/src/: initialize.rs  lib.rs  logger.rs  plugin.rs
crates/server/: Cargo.toml
crates/server/examples/: server_b.rs
crates/server/src/: extract.rs  lib.rs  request.rs  response.rs  server.rs
crates/server/src/extract/: botid.rs  context.rs  payload.rs
crates/server/src/routing/: typed.rs
crates/sithra/: Cargo.toml
crates/sithra-web/: Cargo.toml
crates/sithra-web/src/: auth.rs  main.rs  util.rs
crates/sithra-web/web/: 404.html  package-lock.json  package.json  svelte.config.js  vite.config.ts
crates/sithra-web/web/src/: app.css  app.html
crates/sithra-web/web/src/lib/: auth.ts  path-utils.ts  state.svelte.ts
crates/sithra-web/web/src/lib/api/: clone-plugin.ts  ctrl-plugin.ts  del-plugin.ts  details.ts  info.ts  list-files.ts  save-config.ts
crates/sithra-web/web/src/lib/components/: action-bar.svelte  app-sidebar.svelte  clone-dialog.svelte  dark-toggle.svelte  del-dialog.svelte  header.svelte  login-dialog.svelte  signup-dialog.svelte
crates/sithra-web/web/src/lib/toml/: editor-theme.ts  editor-toml.ts  editor.svelte  toml-utils.ts
crates/sithra-web/web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
crates/sithra-web/web/src/routes/plugin/[id]/: +page.svelte  +page.ts
crates/sithra/src/: conf.rs  lib.rs  loader.rs  main.rs
crates/transport/: Cargo.toml
crates/transport/examples/: recv.rs  send.rs
crates/transport/src/: channel.rs  datapack.rs  lib.rs  util.rs
crates/types/: Cargo.toml
crates/types/src/: channel.rs  initialize.rs  lib.rs  log.rs  macros.rs  message.rs
plugins/crypt/: Cargo.toml
plugins/crypt/src/: base.rs  main.rs  plus.rs
plugins/dice/: Cargo.toml
plugins/dice/src/: main.rs
plugins/echo/src/: main.rs
plugins/gh-notify/: Cargo.toml
plugins/gh-notify/src/: event.rs  main.rs  webhook.rs
plugins/management-tools/: Cargo.toml
plugins/management-tools/src/: main.rs
plugins/mc-tools/: Cargo.toml
plugins/mc-tools/src/: main.rs  server.rs  skin.rs
plugins/mctools/: Cargo.toml
plugins/mctools/src/: main.rs  server.rs  skin.rs  util.rs
plugins/rand-lyric/: Cargo.toml
plugins/rand-lyric/lyric/: -ize  A rainy dancer  Catchy !?  Hello World !  JUMPIN’ OVER !  Möbius  haraRe:  parasite  the Hole  w⁄o U  あなたしか見えないの  あまもや  まにまに  アイソトープ  スーパーノヴァ  ノウナイディスコ  パノプティコン  ピプパペット  プシ  ボイドロイド  ムーンライトダンサー  メカクシアニン  モノクロセンス  ユメミ  三日月ステップ  削いで、  匙ノ咒  夜が引いていく  夢遊病ダンサー  心音賛歌  怪電話  星見の唄  梅に鶯  遊覧逃飛行
plugins/rand-lyric/src/: main.rs
plugins/rune-run/: Cargo.toml
plugins/rune-run/src/: main.rs
plugins/simple-ai/: Cargo.toml
plugins/simple-ai/src/: main.rs
