[package]
name = "sithra-kit"
version = "0.1.0"
edition.workspace = true

[dependencies]
tower = { workspace = true, optional = true }
pin-project = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
log = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# Workspace dependencies

sithra-server.workspace = true
sithra-types.workspace = true
sithra-kit-macros = { workspace = true, optional = true }

[lints]
workspace = true

[features]
default = ["layers", "logger", "initialize", "plugin", "macros"]
layers = ["tower", "pin-project", "futures-util"]
logger = ["log", "once_cell"]
initialize = ["futures-util"]
plugin = ["serde", "thiserror", "tokio", "schemars", "serde_json", "macros"]
macros = ["sithra-kit-macros"]
