[package]
name = "sithra-web"
version = "0.1.0"
edition.workspace = true

[dependencies]
sithra.workspace = true
tokio.workspace = true
log.workspace = true
thiserror.workspace = true
tracing-subscriber = "0.3"
axum = "0.8"
anyhow = "1"
tower-http = { version = "0.6", features = ["fs"] }

[lints]
workspace = true
