[package]
name = "sithra"
version = "0.1.0"
edition.workspace = true

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
futures-util.workspace = true
rmp-serde.workspace = true
pin-project.workspace = true
bytes.workspace = true
thiserror.workspace = true
ulid.workspace = true
serde.workspace = true
either.workspace = true
smallvec.workspace = true
tower.workspace = true
matchit.workspace = true
triomphe.workspace = true
ahash.workspace = true
log.workspace = true
toml_edit = { version = "0.23", features = ["serde"] }
toml = "0.9"
tracing-subscriber = "0.3"
anyhow = "1"


# Workspace dependencies

sithra-kit.workspace = true

[lints]
workspace = true
