[package]
name = "sithra-transport"
version = "0.1.0"
edition.workspace = true

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
futures-util.workspace = true
rmp-serde.workspace = true
bytes.workspace = true
thiserror.workspace = true
ulid.workspace = true
serde.workspace = true
serde_json.workspace = true
either.workspace = true
triomphe.workspace = true
typeshare.workspace = true
log.workspace = true

[lints]
workspace = true
