[package]
name = "sithra-types"
version = "0.1.0"
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
typeshare.workspace = true
thiserror.workspace = true

# Workspace dependencies

sithra-server.workspace = true
sithra-transport.workspace = true
smallvec.workspace = true
log.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
