[package]
name = "gh-notify"
version = "0.1.0"
edition.workspace = true

[dependencies]
sithra-kit.workspace = true
tokio.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
axum = "0.8"
hmac = "0.12"
sha2 = "0.10"
anyhow = "1.0"
hex = "0.4"

[lints]
workspace = true
