[package]
name = "mctools"
version = "0.1.0"
edition.workspace = true

[dependencies]
sithra-kit.workspace = true
tokio.workspace = true
thiserror.workspace = true
triomphe.workspace = true
log.workspace = true
serde.workspace = true
bytes.workspace = true
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json"
] }
resvg = "0.45"
png = "0.17"

[lints]
workspace = true
